[metadata]
name = cryptnoxpro
version = attr: cryptnoxpro.__version__
description_file = README.rst
long_description_content_type = text/x-rst
keywords =
    python
    cryptography
    bitcoin
    ethereum
    cleos
    cryptocurrency
    wallet
license = GPLv3+
author = Cryptnox SA
author_email = info@cryptnox.ch
home_page = https://www.cryptnox.com/
project_urls =
    Source Code = https://github.com/Cryptnox-Software/cryptnoxpro
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security :: Cryptography

[options]
python_requires = >=3.11,<=3.13.7
packages = find:
packages_dir = cryptnoxpro
zip_safe = False
include_package_data = True
install_requires =
    argparse
    appdirs
    base58
    boto3
    ecdsa
    colander
    cryptnoxpy>=2.0.0
    lazy-import
    pytz
    requests
    tabulate
    stdiomask
    web3
    winsdk;platform_system=='Windows'

[options.entry_points]
console_scripts =
    cryptnox = cryptnoxpro.main:main

[options.packages.find]
exclude =
    tests

[pycodestyle]
max-line-length = 120
count = true
statistics = true
exclude = .venv,build,dist,*.egg-info,setup.macos,temp_macos,build,setup

[flake8]
max-line-length = 120
exclude = .venv,build,dist,*.egg-info,setup.macos,temp_macos,build,setup
