[metadata]
name = cryptnox_cli
version = attr: cryptnox_cli.__version__
description = CLI for managing Cryptnox smart card wallets.
long_description_content_type = text/markdown
keywords =
    python
    cryptography
    bitcoin
    ethereum
    cryptocurrency
    wallet
license = GPLv3+
author = Cryptnox SA
author_email = info@cryptnox.ch
home_page = https://www.cryptnox.com/
project_urls =
    Source Code = https://github.com/Cryptnox-Software/cryptnox-cli
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Security :: Cryptography
    Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Smart Card

[options]
python_requires = >=3.11,<=3.13.7
packages = find:
packages_dir = cryptnox_cli
zip_safe = False
include_package_data = True
install_requires =
    argparse
    appdirs
    base58
    boto3
    ecdsa
    colander
    cryptnox-sdk-py>=1.0.1
    lazy-import
    pytz
    requests
    tabulate
    stdiomask
    web3
    winsdk;platform_system=='Windows'

[options.entry_points]
console_scripts =
    cryptnox = cryptnox_cli.main:main

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 120
exclude = .venv,build,dist,*.egg-info,setup.macos,temp_macos,build,setup
